[tool.poetry]
name = "gram"
version = "0.1.0"
description = ""
authors = ["Tyler Schlichenmeyer <tyler.schlichenmeyer@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.0.8"
django-environ = "^0.4.5"
whitenoise = "^5.1.0"
django-crispy-forms = "^1.9.1"
django-allauth = "^0.42.0"
psycopg2 = "^2.8.5"
django-plotly-dash = "^1.4.1"
pandas = "^1.0.5"
pygsheets = "^2.0.3"

[tool.poetry.dev-dependencies]
django-debug-toolbar = "^2.2"
django-extensions = "^3.0.2"
psycopg2-binary = "^2.8.5"
psycopg2 = "^2.8.5"
pylint = "^2.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
