[tool.poetry]
name = "gram"
version = "0.1.0"
description = ""
authors = ["Tyler Schlichenmeyer <tyler.schlichenmeyer@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8.5"
whitenoise = "^5.1.0"
pandas = "^1.0.5"
pygsheets = "^2.0.3"
gunicorn = "^20.0.4"
dash = "^1.14.0"
dash-bootstrap-components = "^0.10.3"
python-dotenv = "^0.14.0"

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
