[tool.poetry]
name = "gram"
version = "0.1.0"
description = ""
authors = ["Tyler Schlichenmeyer <tyler.schlichenmeyer@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8.3"
whitenoise = "^5.1.0"
pandas = "^1.0.5"
pygsheets = "^2.0.3"
dash = "^1.14.0"
dash-bootstrap-components = "0.10.6rc1"
gunicorn = "^20.0.4"
python-dotenv = "^0.14.0"
flask-talisman = "^0.7.0"

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"
black = {version = "^20.8b1", allow-prereleases = true}
selenium = "^3.141.0"
dash = {extras = ["testing"], version = "^1.16.2"}
python-dotenv = "^0.14.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
